--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,24 @@ out/
 broadcast/
 lib/
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+*.so
+.venv/
+venv/
+ENV/
+env/
+.ipynb_checkpoints/
+
+# Large data files (ORD database)
+ord-data/
+*.pbz2
+*.pb
+*.json.gz
+
 # Miscellaneous
 .cache/
 *.pid
